# b2b-saas

./: README.md
backend/: .dockerignore  Dockerfile  Dockerfile.bak  README.md  compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: tasks.py  webhooks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: task.py
backend/app/schemas/: task.py
frontend/: .gitignore  README.md  package.json  vite.config.ts
frontend/src/: types.ts
frontend/src/components/: kanban-board.tsx  layout.tsx  task-card.tsx  task-column.tsx  task-form.tsx
frontend/src/routes/: __root.tsx  dashboard.lazy.tsx  index.lazy.tsx  pricing.lazy.tsx  sign-in.lazy.tsx  sign-up.lazy.tsx
frontend/src/routes/sign-in/tasks/: choose-organization.lazy.tsx
frontend/src/routes/sign-up/: verify-email-address.lazy.tsx
frontend/src/services/: api.ts
frontend/src/styles/components/: layout.css  modal.css
